# keepluggable

./: .gitignore  LICENSE.rst  MANIFEST.in  README.md  README.rst  ROADMAP.rst  build_docs.sh  build_sphinx_documentation.sh  pyproject.toml  release_new_version.py  setup.cfg  setup.py
docs/: LICENSE.rst  Makefile  conf.py  getting-started.rst  getting_started.rst  index.rst  integration_pyramid.rst  make.bat
docs/source/: conf.py  getting_started.rst  index.rst  integration_pyramid.rst
docs/source/api/: keepluggable.rst  keepluggable.storage_file.rst  keepluggable.storage_metadata.rst  keepluggable.web.pyramid.rst  keepluggable.web.rst  modules.rst
keepluggable/: __init__.py  actions.py  exceptions.py  image_actions.py  orchestrator.py
keepluggable/storage_file/: __init__.py  amazon_s3.py  local.py
keepluggable/storage_metadata/: sql.py
keepluggable/web/: __init__.py
keepluggable/web/pyramid/: __init__.py  resources.py  views.py
tests/: __init__.py
tests/fast/: test_actions.py  test_base_file.py
tests/unit/: test_base_file.py
