[tool.poetry]
    name = "keepluggable"
    version = "0.10.1.dev1"
    description = "Manage storage of images and other files, with metadata."
    authors = ["Nando Florestan <nandoflorestan@gmail.com>"]
    license = "BSD"
    repository = "https://github.com/nandoflorestan/keepluggable"
    documentation = "http://docs.nando.audio/keepluggable/latest/"
    classifiers = [
        # https://pypi.org/pypi?:action=list_classifiers
        "Development Status :: 4 - Beta",
        # "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: Implementation :: CPython",
        # 'Programming Language :: Python :: Implementation :: PyPy',
        "Framework :: Pyramid",
        "Topic :: Database",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Internet :: WWW/HTTP :: WSGI",
        "Topic :: Multimedia :: Graphics :: Graphics Conversion",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    # A list of keywords (max: 5) that the package is related to
    keywords = ["web", "pyramid", "images", "store", "thumbnails"]

[tool.poetry.dependencies]
    python = "^3.8"
    # https://pypi.org/pypi?:action=list_classifiers
    bag = ">= 5.0.0"
    kerno = ">= 0.7.0"
    pydantic = "^1.4"
    sqlalchemy = "*"

[tool.poetry.dev-dependencies]
    pytest = "*"

[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
